# pytest-pw-config-gen

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/pytest_pw_config_gen/: cli.py  defaults.py  models.py  writer.py
src/pytest_pw_config_gen/renderers/: __init__.py  conftest_py.py  pyproject_toml.py  pytest_ini.py
src/pytest_pw_config_gen/templates/: conftest_py.j2
src/pytest_pw_config_gen/tui/: curses_form.py
tests/: conftest.py  test_cli.py  test_defaults.py  test_models.py  test_writer.py
tests/test_renderers/: test_conftest_py.py  test_pyproject_toml.py  test_pytest_ini.py
tests/test_tui/: test_curses_form.py
