[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-pw-config-gen"
version = "0.1.0"
description = "Generate pytest-playwright configuration files (pytest.ini, pyproject.toml, conftest.py) via CLI"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "pytest-pw-config-gen maintainers" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "tomlkit>=0.12",
    "jinja2>=3.1",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/vincenzo-gasparo/pytest-pw-config-gen"
Issues = "https://github.com/vincenzo-gasparo/pytest-pw-config-gen/issues"

[project.scripts]
pytest-pw-config-gen = "pytest_pw_config_gen.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_pw_config_gen"]
artifacts = ["src/**/*.j2"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "v{version}"
commit_message = "chore(release): v{version} [skip ci]"
